# TODOLIST

./: README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src/services/: aiParser.ts  aiService.ts  fs.ts  i18n.ts  listStore.ts  todoStore.ts
src/ui/: dom.ts  events.ts
